[package]
name = "common"
version = "0.0.1"
authors = ["Thiago Machado <thiago@keyko.io>"]
edition = "2021"
resolver = "2"

[dependencies]
near-sdk = {version = "=4.0.0-pre.8", features = ["unstable"]}
near-sdk-sim = {version = "4.0.0-pre.8", optional = true}
near-units = "0.1.0"
near-contract-standards = "4.0.0-pre.8"
base64 = "0.13.0"
regex = "1.5.5"
url = "2.2.2"
indexmap = "1.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"

[dependencies.contract-version]
git = "https://github.com/Seatlab-dev/contract-version.git"
rev = "d143a48"

[dependencies.serde_with]
version = "1.11.0"
default-features = false
features = [ "macros" ]

[dependencies.schemars]
version = "0.8.10"
features = ["preserve_order", "url"]

[patch.crates-io.near-sdk]
git = "https://github.com/Seatlab-dev/Forked-Near-Rust-Sdk.git"
rev = "83f1fb6"

[patch.crates-io.schemars]
git = "https://github.com/Seatlab-dev/schemars.git"
rev = "57ffb49"


[features]
default = []
sim = ["near-sdk-sim"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
strip = true
debug = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true